# modular-analysis

./: .gitignore  .nia.cache  README.md  count_fact.sh  dune-project  lambda-interpreter.opam  temp.l  test.lgo
doc/: main.tex
doc/coq/: .CoqMakefile.d  .Makefile.coq.d  ALinking.v  Abstract.glob  Abstract.v  Concrete.glob  Concrete.v  CoqMakefile  CoqMakefile.conf  Equiv.v  Linking.v  Makefile  Makefile.coq  Makefile.coq.conf  Sound.v  Syntax.glob  Syntax.v  _CoqProject  check.sh  check_verbose.sh  modular.v  test.v
doc/coq/basics/: Basics.v  tactics.v
doc/coq/signature/: ALinking.v  Abstract.v  Bound.v  ConcretEquivalence.v  Concrete.temp  Concrete.v  Example.v  Linking.v  OperationalEquivalence.v  Sound.temp  Sound.v  Syntax.v
doc/coq/simple/: ALinking.tmp  ALinking.v  Abstract.tmp  Abstract.v  Bound.v  ConcretEquivalence.v  Concrete.v  Equiv.v  Fixpoint.tmp  Fixpoint.v  LinkSound.tmp  LinkSound.v  Linking.tmp  Linking.v  OperationalEquivalence.v  Sound.tmp  Sound.v  Syntax.v
doc/coq/tactics/: sflib.v
doc/coq/typing/: typing.v
doc/proof_sketch/: cfa.tex  main.tex  typing.tex
doc/slides/: main.tex
lib/: analyze.ml  analyze.mli  dune  evaluate.ml  label.ml  lambda.ml  lbl_analyze.ml  lexer.mll  map.ml  map.mli  non_tail_recursive.ml  parser.mly  pp.ml  set.ml  set.mli  syntax.ml
poster/: poster.tex
test/: church_eq.l  church_eq_simple.l  dune  factorial.l  factorial_eager.l  free.l  infinite.l  perm.l  power.l  test
