(lang dune 3.4)

(using menhir 2.1)

(name lambda-interpreter)

(generate_opam_files true)

(source
 (github LimitEpsilon/lambda-interpreter))

(authors "Joonhyup Lee")

(maintainers "Joonhyup Lee")

(license MIT)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
